# Agent_IC_design_for_vivado

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml  requirements-dev.txt
.agents/skills/digital-ic-design/: SKILL.md
.agents/skills/digital-ic-rtl-designer/: SKILL.md
.agents/skills/digital-ic-verifier/: SKILL.md
.claude/: settings.local.json
.codex/: config.toml
.github/branch-protection/: vivado-release-gate.json  vivado-runner-security.md
.github/scripts/: run-vivado-integration.ps1  vivado-preflight.tcl
.github/workflows/: python-quality.yml  vivado-integration.yml
.trae/: config.json
.trae/agent/: README.md  agent.json  agent.py  agent_async_fifo_render.py  agent_async_fifo_reports.py  agent_async_fifo_runtime.py  agent_bootstrap.py  agent_capabilities.py  agent_cli.py  agent_cli_dispatch.py  agent_cli_parser.py  agent_composition.py  agent_config.py  agent_contracts.py  agent_diagnostics.py  agent_entrypoint.py  agent_execution.py  agent_legacy_target_facades.py  agent_observability.py  agent_provider.py  agent_reports.py  agent_round_robin_arbiter.py  agent_runtime.py  agent_runtime_facades.py  agent_sim_smoke.py  agent_skill_execution.py  agent_skill_listing.py  agent_skill_tool.py  agent_sync_fifo.py  agent_waveform.py  agent_workflow.py  artifact_manifest.py  capability_preflight.py  coverage_closure.py  coverage_gates.py  coverage_history.py  coverage_recommendations.py  environment_report.py  failure_archive.py  intent_router.py  (+14 more)
.trae/agent/adapters/: __init__.py  report.py  vivado.py  waveform.py
.trae/agent/target_examples/: async_fifo.py
.trae/agent/target_handlers/: async_fifo.py  round_robin_arbiter.py  sync_fifo.py
.trae/agent/targets/: async_fifo.json  round_robin_arbiter.json  sync_fifo.json
.trae/skills/digital-ic-designer/: SKILL.md
.trae/skills/digital-ic-rtl-designer/: SKILL.md
.trae/skills/digital-ic-verifier/: SKILL.md
docs/: ClaudeCode_Installation_Guide.md  vivado_async_fifo_lessons_learned.md
docs/references/: Vivado 仿真器中的通用验证方法学 (Universal Verification Methodology, UVM) 支持.md  在Vivado 仿真器中搭建UVM验证环境（不需要联合modelsim）.md
docs/roadmap/: p4_future_upgrade_roadmap.md  p5_3_round_robin_arbiter_execution_record.md  p5_4_p5_5_execution_record.md  p5_general_digital_ic_agent_design.md  p5_series_execution_record.md  project_followup_backlog.md
docs/superpowers/plans/: 2026-06-18-digital-ic-agent-minimal-loop.md
docs/superpowers/specs/: 2026-06-18-digital-ic-agent-minimal-loop-design.md
docs/testing/: agent_skill_runtime_hardening.tdd.md  artifact_history_rotation.tdd.md  final_engineering_acceptance.md  p0_1_agent_execution_loop.tdd.md  p0_1_synthpilot_follow_up.md  p0_2_target_plugin_boundary.tdd.md  p0_3_vivado_release_gate.tdd.md  p0_unified_verification_verdict.tdd.md  p1_1_agent_bootstrap_split.tdd.md  p1_1_agent_capabilities_split.tdd.md  p1_1_agent_design_spec_split.tdd.md  p1_1_agent_diagnostics_split.tdd.md  p1_1_agent_document_facades_split.tdd.md  p1_1_agent_runtime_facades_split.tdd.md  p1_1_agent_sim_smoke_split.tdd.md  p1_1_agent_skill_execution_split.tdd.md  p1_1_agent_skill_listing_split.tdd.md  p1_1_agent_target_flow_split.tdd.md  p1_1_agent_waveform_analysis_split.tdd.md  p1_1_agent_workflow_split.tdd.md  p1_1_cli_dispatch_split.tdd.md  p1_1_cli_parser_split.tdd.md  p1_1_core_agent_facade_compaction.tdd.md  p1_1_report_template_split.tdd.md  p1_1_src_package_layout.tdd.md  p1_1_target_mixin_decoupling.tdd.md  p1_2_agent_config_typed_contract.tdd.md  p1_2_agent_contract_payloads.tdd.md  p1_2_artifact_manifest_typed_contract.tdd.md  p1_2_strict_ruff_critical_modules.tdd.md  p1_3_async_fifo_typed_contracts.tdd.md  p1_3_structured_error_model.tdd.md  p1_4_install_version_supply_chain.tdd.md  p1_module_extraction.tdd.md  p2_agent_eval_auto_docs.tdd.md  p3_0_async_fifo_uvm_smoke.tdd.md  p3_1_async_fifo_uvm_coverage.tdd.md  p3_2_async_fifo_uvm_coverage_summary.tdd.md  p3_x_async_fifo_uvm_completion.tdd.md  p4_0_coverage_closure_dashboard.tdd.md  (+27 more)
evals/digital_ic/: manifest.json
scripts/: check_release_tree.py  check_risk_coverage.py  generate_agent_eval_report.py  generate_p7_eval_summary.py  generate_quality_summary.py  generate_test_module_report.py  p0_1_synthpilot_mcp_evidence.py  run_negative_design_evals.py  run_real_design_evals.py  run_real_repair_evals.py  smoke_test_distribution.py  sync_agent_config.py  sync_agent_surfaces.py
src/digital_ic_agent/: __init__.py  __main__.py  _legacy.py  agent.py  cli.py  entrypoint.py
src/digital_ic_agent/_runtime/: __init__.py  (+78 more)
tests/: test_agent.py  test_agent_adapters.py  test_agent_cli_dispatch_branches.py  test_agent_cli_failure_paths.py  test_agent_cli_routing.py  test_agent_evaluation.py  test_agent_execution.py  test_agent_runtime_boundaries.py  test_agent_sim_smoke_branches.py  test_agent_sim_smoke_runtime.py  test_agent_surface_sync.py  test_agent_vivado_diagnostics.py  test_agent_waveform_branches.py  test_agent_waveform_runtime.py  test_agent_workflow_contract.py  test_architecture_runtime.py  test_artifact_manifest.py  test_async_fifo_plugin_contract.py  test_async_fifo_reports.py  test_async_fifo_rtl_flow.py  test_async_fifo_uvm_wave.py  test_async_fifo_vcd_analysis.py  test_codex_digital_ic_skill.py  test_config_schema.py  test_coverage_closure.py  test_coverage_history.py  test_coverage_recommendations.py  test_environment_report.py  test_external_plugin_discovery.py  test_external_plugin_subprocess.py  test_external_plugin_timeout.py  test_external_plugin_trust_boundary.py  test_failure_archive.py  test_generic_verification.py  test_intent_contract.py  test_machine_cli_lifecycle.py  test_machine_cli_reference.py  test_machine_cli_verify.py  test_machine_cli_workspace_spec.py  test_mcp_client_branches.py  (+62 more)
tests/fixtures/: agent_eval_cases.json  agent_routing_cases.json  intent_contract_cases.json
(+109 files in other folders)
