[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "digital-ic-agent"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
digital-ic-agent = "digital_ic_agent.agent:main"

[dependency-groups]
dev = [
    "hatchling==1.27.0",
    "mypy==1.17.1",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.12.0",
]

[tool.hatch.version]
path = "src/digital_ic_agent/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/digital_ic_agent"]
force-include = { ".trae/skills" = "digital_ic_agent/skills" }

[tool.hatch.build.targets.sdist]
include = [
    "src/digital_ic_agent",
    ".trae/agent",
    ".trae/skills",
    "pyproject.toml",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "outputs",
    ".tmp",
    ".tmp-*",
    "VCD_ANALYZER-main",
    "RWaveAnalyzer-main",
    "docs/tools_archive",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B904", "B905", "UP017", "SIM105", "SIM300", "RUF005"]

[tool.ruff.lint.per-file-ignores]
"src/digital_ic_agent/_runtime/agent.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
files = [
    "src/digital_ic_agent",
]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = "(outputs|VCD_ANALYZER-main|RWaveAnalyzer-main|docs/tools_archive)"

[tool.coverage.run]
branch = true
source = ["src/digital_ic_agent"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
